--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>Untitled</title>
+  <title>One month with VS Code</title>
   <style type="text/css">
     body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -451,6 +451,15 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 <li>Sublime Text continues to be great for editing text</li>
 <li>Give it a try!</li>
 </ul>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-10">
+    <section class="slide-content"><div class="author">
+  <h1 class="name">Daniel Paz-Soldan</h1>
+    <h3 class="twitter">
+      <a href="http://twitter.com/@danpazsoldan">@danpazsoldan</a>
+    </h3>
+</div>
 </section>
   </div>
 
