--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 <li>Node is a first class citizen (also C# and TypeScript)</li>
 <li>Intellisense</li>
 <li>In-editor debugging</li>
-<li>Inline errors and warnings</li>
+<li><a href="https://code.visualstudio.com/Docs/languages/javascript#_javascript-linters-eslint-jshint">Lint/validation errors and warnings with eslint plugin</a></li>
 <li>Git (branch, checkout, push, pull, diff, gutter indicators)</li>
 <li>Command palette</li>
 </ul>
@@ -396,7 +396,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 <ul>
 <li>Limited git support (stash, rebase, checkout remotes)</li>
 <li>Goto, especially in deeply nested directory trees</li>
-<li>Intellisense without TypeScript</li>
+<li><a href="https://code.visualstudio.com/docs/languages/javascript">Intellisense without TypeScript</a></li>
 <li>Lack of remote debugging e.g. for Docker (on roadmap)</li>
 <li>Electron Shell</li>
 </ul>
@@ -405,19 +405,19 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
   <div class="slide hidden" id="slide-5">
     <section class="slide-content"><h3 id="nits">Nits</h3>
 <ul>
-<li>Missing end_of_file_newline_on_save</li>
-<li>Column indicator at col 80</li>
+<li><a href="https://visualstudio.uservoice.com/forums/293070-visual-studio-code/suggestions/8298222-add-new-line-at-the-end-file-on-save">Missing end_of_file_newline_on_save</a></li>
+<li><a href="https://visualstudio.uservoice.com/forums/293070-visual-studio-code/suggestions/7756947-column-indicator-at-80-columns">Column indicator at col 80</a></li>
 <li>Dealing with node version manager</li>
 <li>Have to add a line to .gitignore</li>
 <li>Warning on global vars e.g. in mocha tests</li>
-<li>Missing good auto-jsdocs plugin</li>
+<li>Missing a <a href="https://marketplace.visualstudio.com/items/stevencl.addDocComments">good auto-jsdocs plugin</a></li>
 </ul>
 </section>
   </div>
   <div class="slide hidden" id="slide-6">
     <section class="slide-content"><h3 id="live-coding">Live coding</h3>
 <ul>
-<li>New feature git workflow on bodybuilder</li>
+<li>New feature git workflow</li>
 <li>Debugging</li>
 </ul>
 </section>
@@ -425,12 +425,13 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
   <div class="slide hidden" id="slide-7">
     <section class="slide-content"><h3 id="tips-n-tricks">Tips n&#39; Tricks</h3>
 <ul>
-<li>Navigate recently opened files</li>
+<li>Navigate recently opened files (Ctrl + Tab)</li>
 <li>F2 to rename symbol</li>
 <li>Expand and shrink selection</li>
 <li>Goto definition and peek definition</li>
 <li>Diff any two files</li>
 <li>Diff inline / side-by-side views</li>
+<li><a href="https://code.visualstudio.com/docs/customization/keybindings">Key shortcuts</a></li>
 </ul>
 </section>
   </div>
@@ -439,7 +440,6 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 <ul>
 <li>Tasks - grunt tasks automatically recognized</li>
 <li>Typings/TypeScript</li>
-<li><a href="https://marketplace.visualstudio.com/#VSCode">Extensions</a></li>
 <li>Webstorm, etc.</li>
 </ul>
 </section>
